option('docdir', type : 'string', value : 'share/doc/netpanzer',
       description : 'directory where the documentation should be installed to')
option('build_tests',
  type : 'boolean',
  value : 'true',
  description : 'Build tests')
option('nls',
  type : 'boolean',
  value : 'true',
  description : 'include native language support (install translations)')
