src = []

src_basename = [
  'Bot.cpp',
  'BotPlayer.cpp',
  'BotTaskList.cpp'
]

foreach file : src_basename
  src += [join_paths('Bot', file)]
endforeach

src_basename = [
  'ObjectiveInterface.cpp',
  'Objective.cpp',
]
foreach file : src_basename
  src += [join_paths('Objectives', file)]
endforeach

src_basename = [
  'ProxyServer.cpp',
  'ClientSocket.cpp'
]
foreach file : src_basename
  src += [join_paths('Network', file)]
endforeach

src_basename = [
  'UnitBucketArray.cpp',
  'UnitOpcodeEncoder.cpp',
  'UnitGlobals.cpp',
  'UnitState.cpp',
  'UnitBlackBoard.cpp',
  'UnitProfileInterface.cpp',
  'Vehicle.cpp',
  'UnitOpcodeDecoder.cpp',
  'UnitInterface.cpp'
]
foreach file : src_basename
  src += [join_paths('Units', file)]
endforeach

src_basename = [
  'ConfigVariable.cpp',
  'Heartbeat.cpp',
  'TileInterface.cpp',
  'KeyboardInterface.cpp',
  'Console.cpp',
  'MapInterface.cpp',
  'InfoSocket.cpp',
  'WorldViewInterface.cpp',
  'MapsManager.cpp',
  'GameManager.cpp',
  'DedicatedGameManager.cpp',
  'PathScheduler.cpp',
  'GameControlRulesDaemon.cpp',
  'ConsoleInterface.cpp',
  'GameConfig.cpp',
  'BotGameManager.cpp',
  'ChatInterface.cpp',
  'MouseInterface.cpp',
  'ServerConsole.cpp',
  'PlayerGameManager.cpp',
  'PlayerInterface.cpp',
  'BaseGameManager.cpp'
]
foreach file : src_basename
  src += [join_paths('Interfaces', file)]
endforeach

src_basename = [
  'ParticleSystemGlobals.cpp',
  'DirtKickParticle2D.cpp',
  'FlameParticle2D.cpp',
  'GroundExplosionParticleSystem2D.cpp',
  'ParticleSystem2D.cpp',
  'Particle2D.cpp',
  'PuffParticle2D.cpp',
  'CloudParticle2D.cpp',
  'GroundExplosionParticle2D.cpp',
  'FireParticleSystem2D.cpp',
  'SnowParticle2D.cpp',
  'ParticleTweakView.cpp',
  'FireParticle2D.cpp',
  'SmokingTrajectoryParticle2D.cpp',
  'SnowParticleSystem2D.cpp',
  'TemplateMuzzleSystem.cpp',
  'TrajectoryParticle2D.cpp',
  'SmolderParticleSystem2D.cpp',
  'CraterParticle2D.cpp',
  'VectorPuffParticle2D.cpp',
  'RadarPingParticle2D.cpp',
  'SparkParticle2D.cpp',
  'WindParticle2D.cpp',
  'ParticleInterface.cpp',
  'TemplateExplosionSystem.cpp',
  'FlashParticle2D.cpp',
  'Physics.cpp',
  'ChunkTrajectoryParticle2D.cpp'
]
foreach file : src_basename
  src += [join_paths('Particles', file)]
endforeach

src_basename = [
  'RGBColor.cpp',
  'Palette.cpp',
  'Span.cpp',
  'PackedSurface.cpp',
  'ColorTable.cpp',
  'DigitText.cpp',
  'Surface.cpp',
  'Color.cpp'
]
foreach file : src_basename
  src += [join_paths('../Lib/2D', file)]
endforeach

src_basename = [
  'ScriptManager.cpp',
  'NetPanzerModule.cpp',
  'ScriptHelper.cpp'
]
foreach file : src_basename
  src += [join_paths('Scripts', file)]
endforeach

src_basename = [
  'print.c',
  'lstring.c',
  'ltablib.c',
  'loadlib.c',
  'lmathlib.c',
  'lstate.c',
  'ldump.c',
  'loslib.c',
  'liolib.c',
  'ldblib.c',
  'lbaselib.c',
  'lapi.c',
  'llex.c',
  'lopcodes.c',
  'lvm.c',
  'ltable.c',
  'linit.c',
  'lobject.c',
  'lstrlib.c',
  'lcode.c',
  'ldebug.c',
  'lauxlib.c',
  'ldo.c',
  'lfunc.c',
  'lzio.c',
  'ltm.c',
  'lgc.c',
  'lmem.c',
  'lparser.c',
  'lundump.c'
]
foreach file : src_basename
  src += [join_paths('../Lib/lua', file)]
endforeach

src_basename = [
  'TimerInterface.cpp',
  'Math.cpp',
  'UtilInterface.cpp',
  'Timer.cpp',
  'TimeStamp.cpp',
  'Log.cpp',
  'FileSystem.cpp',
  'BresenhamLine.cpp',
  'Exception.cpp',
  'StringUtil.cpp'
]
foreach file : src_basename
  src += [join_paths('../Lib/Util', file)]
endforeach

src_basename = [
  'WorldInputCmdProcessor.cpp',
  'SpriteSorter.cpp',
  'OpcodeDebugger.cpp',
  'ScreenSurface.cpp',
  'WorldMap.cpp',
  'TipOfDay.cpp',
  'PlacementMatrix.cpp',
  'SelectionList.cpp',
  'PlayerState.cpp',
  'Sprite.cpp',
  'Network/ClientConnectDaemon.cpp',
  'Network/ServerMessageRouter.cpp',
  'Network/NetworkClient.cpp',
  'Network/NetworkState.cpp',
  'Network/NetworkServer.cpp',
  'Network/NetworkInterface.cpp',
  'Network/NetMessageEncoder.cpp',
  'Network/NetPacketDebugger.cpp',
  'Network/NetMessageDecoder.cpp',
  'Network/ConnectNetMessage.cpp',
  'Network/NetPacketQueues.cpp',
  'Network/ClientMessageRouter.cpp',
  'Network/ServerConnectDaemon.cpp',
  'PlayerUnitConfig.cpp',
  'MapFile.cpp',
  'SpawnList.cpp',
  'AI/PathList.cpp',
  'AI/Astar.cpp',
  'AI/PathingState.cpp',
  'ViewCamera.cpp',
  'SelectionBoxSprite.cpp',
  'TileSet.cpp'
]
foreach file : src_basename
  src += [join_paths('Classes', file)]
endforeach

src_basename = [
  'ShellWeapon.cpp',
  'MissleWeapon.cpp',
  'ProjectileInterface.cpp',
  'BulletWeapon.cpp',
  'WeaponGlobals.cpp',
  'Weapon.cpp',
  'Projectile.cpp'
]
foreach file : src_basename
  src += [join_paths('Weapons', file)]
endforeach

src_basename = [
  'UnitGlobalPowerUp.cpp',
  'EnemyRadarPowerUp.cpp',
  'BonusUnitPowerUp.cpp',
  'UnitPowerUp.cpp',
  'PowerUp.cpp',
  'PowerUpInterface.cpp',
]
foreach file : src_basename
  src += [join_paths('PowerUps', file)]
endforeach


src_basename = [
  'SDLVideo.cpp',
  'DummySound.cpp',
  'SDLEvents.cpp',
  'Sound.cpp',
  'SDLSound.cpp'
]
foreach file : src_basename
  src += [join_paths('System', file)]
endforeach

src_basename = [
  'NetworkGlobals.cpp',
  'main.cpp',
]
foreach file : src_basename
  src += [join_paths('Core', file)]
endforeach

src_basename = [
  'ResourceManager.cpp',
]
foreach file : src_basename
  src += [join_paths('Resources', file)]
endforeach

src_basename = [
  'GameViewGlobals.cpp',
  'MainMenu/OptionsTemplateView.cpp',
  'MainMenu/SpecialButtonView.cpp',
  'MainMenu/CreditsView.cpp',
  'MainMenu/SkirmishView.cpp',
  'MainMenu/HelpView.cpp',
  'MainMenu/OrderingView.cpp',
  'MainMenu/CreditsScrollView.cpp',
  'MainMenu/Multi/MasterServer/ServerInfo.cpp',
  'MainMenu/Multi/MasterServer/ServerQueryThread.cpp',
  'MainMenu/Multi/MasterServer/ServerList.cpp',
  'MainMenu/Multi/UnitColorView.cpp',
  'MainMenu/Multi/HostOptionsView.cpp',
  'MainMenu/Multi/PlayerNameView.cpp',
  'MainMenu/Multi/TipsView.cpp',
  'MainMenu/Multi/GetSessionView.cpp',
  'MainMenu/Multi/HostJoinTemplateView.cpp',
  'MainMenu/Multi/IPAddressView.cpp',
  'MainMenu/Multi/MapSelectionView.cpp',
  'MainMenu/Multi/JoinView.cpp',
  'MainMenu/Multi/HostView.cpp',
  'MainMenu/Multi/ServerListView.cpp',
  'MainMenu/Multi/UnitSelectionView.cpp',
  'MainMenu/MenuTemplateView.cpp',
  'MainMenu/RMouseHackView.cpp',
  'MainMenu/MainMenuView.cpp',
  'Components/cButton.cpp',
  'Components/Desktop.cpp',
  'Components/Choice.cpp',
  'Components/InfoBar.cpp',
  'Components/ViewGlobals.cpp',
  'Components/Button.cpp',
  'Components/CheckBox.cpp',
  'Components/Component.cpp',
  'Components/View.cpp',
  'Components/cInputField.cpp',
  'Components/Label.cpp',
  'Components/MiniMap.cpp',
  'Components/ScrollBar.cpp',
  'Components/newButton.cpp',
  'Game/MiniMapView.cpp',
  'Game/EndRoundView.cpp',
  'Game/GameView.cpp',
  'Game/CodeStatsView.cpp',
  'Game/HelpScrollView.cpp',
  'Game/UStyleSelectionView.cpp',
  'Game/AreYouSureExitView.cpp',
  'Game/HelpScrollViewAlt.cpp',
  'Game/GameTemplateView.cpp',
  'Game/AreYouSureResignView.cpp',
  'Game/GFlagSelectionView.cpp',
  'Game/LibView.cpp',
  'Game/RankView.cpp',
  'Game/VehicleSelectionView.cpp',
  'Game/DisconectedView.cpp',
  'Game/ResignView.cpp',
  'Game/LoadingView.cpp',
  'Game/MiniMapViewAlt.cpp'
]
foreach file : src_basename
  src += [join_paths('Views', file)]
endforeach

src_basename = [
  'Address.cpp',
  'SocketBase.cpp',
  'TCPSocket.cpp',
  'SocketManager.cpp',
  'NetworkManager.cpp',
  'UDPSocket.cpp',
  'TCPListenSocket.cpp'
]
foreach file : src_basename
  src += [join_paths('../Lib/Network', file)]
endforeach

src_basename = [
  'option.cpp',
  'command_line.cpp',
]
foreach file : src_basename
  src += [join_paths('../Lib/optionmm', file)]
endforeach

src_basename = [
  'BoundBox.cpp',
  'BitArray.cpp',
]
foreach file : src_basename
  src += [join_paths('../Lib/ArrayUtil', file)]
endforeach

src_basename = [
  'fXYZ.cpp',
  'iRect.cpp',
  'iXY.cpp',
  'fRect.cpp',
  'Angle.cpp'
]
foreach file : src_basename
  src += [join_paths('../Lib/Types', file)]
endforeach

deps = [
  dependency('SDL2'),
# SDL2 is case sensitive for the ttf library
  dependency('SDL2_ttf'),
  dependency('SDL2_mixer'),
  dependency('physfs')
]

exe = executable(
  'netpanzer',
  src,
  include_directories : [
    inc_dirs
  ],
  dependencies: [
    deps,
  ]
)
